--- a/templates/home.html
+++ b/templates/home.html
@@ -64,7 +64,7 @@
     <main class="main">
         <!--==================== HOME ====================-->
         <section class="home" id="home">
-            <img src="../static/assets/img/proj21.jpg" alt="" class="home__img">
+            <img src="../static/assets/img/proj29.jpg" alt="" class="home__img">
             <div class="home__container container grid">
                 <div class="home__data">
                     <span class="home__data-subtitle"><b>Rural cart for the will.</b></span>
@@ -171,7 +171,7 @@
 
                 <!--==================== PROJECT 2 ====================-->
                 <div class="place__card">
-                    <img src="../static/assets/img/proj15.jpeg" alt="" class="place__img">
+                    <img src="../static/assets/img/proj32.jpeg" alt="" class="place__img">
 
                     <div class="place__content">
                         <span class="place__rating">
@@ -300,11 +300,11 @@
             </div>
         </section>
 
-        <!--==================== COLLEGES ====================-->
-        <section class="sponsor section">
+        <!--==================== Categories====================-->
+        <!-- <section class="sponsor section">
             <div class="sponsor__container container grid">
                 <div class="sponsor__content">
-                    <img src="../static/assets/img/logo1.jpeg">
+                    <img src="../static/assets/img/proj32.jpeg">
                 </div>
                 <div class="sponsor__content">
                     <img src="../static/assets/img/logo3.png">
@@ -317,7 +317,7 @@
                 </div>
                 <div class="sponsor__content">
                     <img src="../static/assets/img/logo5.png">
-                </div>
+                </div> -->
                 <!-- <div class="sponsor__content">
                     <img src="../static/assets/img/logo5.png" alt="" class="sponsor__img">
                 </div> -->
