--- a/templates/home.html
+++ b/templates/home.html
@@ -386,6 +386,28 @@
 
             });
         });
+
+        function speaking(speech, delayer) {
+            let sleep = (ms) => {
+                return new Promise((resolve) => setTimeout(resolve, ms));
+            };
+
+            console.log("Speaking");
+
+            if (!voices.speaking) {
+                tts.text = speech;
+                voices.speak(tts);
+                sleep(delayer);
+                clearTimeout(timerOut);
+                return;
+
+                if (voices.speaking) {
+                    voices.cancel();
+                    return;
+                }
+            }
+            return;
+        }
     </script>
 
 
