--- a/templates/home.html
+++ b/templates/home.html
@@ -374,7 +374,7 @@
             tag.addEventListener('mouseover', (e) => {
 
                 msg.text = e.target.innerText;
-                tag.style.backgroundColor = "yellow";
+                tag.style.backgroundColor = "grey";
                 speechSynthesis.speak(msg);
 
                 let interval = setInterval(() => {
