form.html page over and done

--- a/templates/form.html
+++ b/templates/form.html
@@ -519,17 +519,22 @@
                     <div class="grid grid-2">
                         <!-- <label for="project_name"></label> -->
                         <!-- <input type="text" placeholder="Name" required> -->
-                        <input type="text" placeholder="Enter Project Name" name="project_name" required label for="project_name">
+                        <input type="text" placeholder="Enter Company Name" name="project_name" required label for="c_name">
                         <!-- <label for="project_name"></label> -->
 
-                        <input type="text" placeholder="Email" name='email' label for="email">
+                        <input type="text" placeholder="Enter Product Name" name='email' required label for="p_name">
                         <!-- <label for="resource_link"></label> -->
 
-                        <input type="url" placeholder="Enter Resource Link" name="resource_link" label for="resource_link">
+                        <input type="url" placeholder="Price" name="resource_link" label for="price">
                         <!-- <label for="resource_link"></label> -->
 
                         <!-- <label for="github_link"></label> -->
-                        <input type="url" placeholder="Enter GitHub Link" name="github_link" label for="github_link">
+                        <input type="url" placeholder="Inventory" name="github_link" label for="inventory">
+
+                        <input type="url" placeholder="Categories" name="github_link" label for="categories">
+
+                        <input type="url" placeholder="Quantity" name="quantity" label for="quantity">
+
 
                     </div>
                 </li>
@@ -543,18 +548,17 @@
                 </li>
 
                 <li>
-                    <label for="project_description"></label>
+                    <label for="description"></label>
 
-                    <textarea name="project_description" placeholder="Project description:"></textarea>
+                    <textarea name="description" placeholder="Description"></textarea>
                 </li>
-                <li>
+                <!-- <li>
                     <input type="file" name="file">
-                    <!-- <input type="submit" value="Submit" /> -->
-                </li>
-                <li>
+                </li> -->
+                <!-- <li>
                     <a href={{service_url}}>
                     {{service_url}} 
-                </a></li>
+                </a></li> -->
                 <li>
                     <input type="checkbox" id="terms">
                     <label for="terms">I have read and agreed with the terms and conditions</label>
