modified form page

--- a/templates/form.html
+++ b/templates/form.html
@@ -485,7 +485,7 @@
     <!-- WAVES -->
     <div class="header">
         <div class="inner-header flex">
-            <h1><b>Upload your project</b></h1>
+            <h1><b>Placing bulk orders:)</b></h1>
         </div>
 
         <!--Waves Container-->
