--- a/templates/home.html
+++ b/templates/home.html
@@ -49,8 +49,9 @@
 
                 <div class="nav__dark">
                     <!-- Theme change button -->
-                    <span class="change-theme-name">Dark mode</span>
-                    <i class="ri-moon-line change-theme" id="theme-button"></i>
+                    <!-- <span class="change-theme-name">Dark mode</span>
+                    <i class="ri-moon-line change-theme" id="theme-button"></i> -->
+                    <i class="fa-solid fa-cart-circle-plus"></i>
                 </div>
 
                 <i class="ri-close-line nav__close" id="nav-close"></i>
