--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="../../static/assets/css/styles.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/brands.min.css" integrity="sha512-nS1/hdh2b0U8SeA8tlo7QblY6rY6C+MgkZIeRzJQQvMsFfMQFUKp+cgMN2Uuy+OtbQ4RoLMIlO2iF7bIEY3Oyg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>3Facto</title>
 </head>
 
@@ -49,9 +49,9 @@
 
                 <div class="nav__dark">
                     <!-- Theme change button -->
-                    <!-- <span class="change-theme-name">Dark mode</span>
-                    <i class="ri-moon-line change-theme" id="theme-button"></i> -->
-                    <i class="fa-solid fa-cart-circle-plus"></i>
+                    <span class="change-theme-name">Dark mode</span>
+                    <i class="ri-moon-line change-theme" id="theme-button"></i>
+                    <!-- <i class="fa-solid fa-cart-circle-plus"></i> -->
                 </div>
 
                 <i class="ri-close-line nav__close" id="nav-close"></i>
