login sign up and form page

--- a/templates/form.html
+++ b/templates/form.html
@@ -505,7 +505,7 @@
     <!-- WAVES -->
     <div class="header">
         <div class="inner-header flex">
-            <h1><b>Placing bulk orders:)</b></h1>
+            <h1><b>Add new product :)</b></h1>
         </div>
 
         <!--Waves Container-->
@@ -565,7 +565,7 @@
                             <option value="reeses">Personal care</option>
                         </select> -->
 
-                        <input type="url" placeholder="Quantity" name="quantity" label for="quantity">
+                        <input type="url" placeholder="Manufacturing Site" name="man_site" label for="man_site">
 
 
                     </div>
