--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -149,14 +149,14 @@
     <form action="/signup" method="post" class="login">
         <h1 style="padding-left: 120px; color:#151D3B ;"><i class="fa-solid fa-user"></i> Sign Up</h1>
 
-        <label for="aitceid"><b>AICTE ID</b></label>
+        <label for="aitceid"><b>Copperative Society ID/Pin ID</b></label>
         <input type="aitceid" id="aitceid" name="aitceid" placeholder="AICTE ID">
 
         <label for="uname"><b>Username</b></label>
         <input type="uname" id="uname" name="uname" placeholder="Username">
 
-        <label for="college_name"><b>College Name</b></label>
-        <input type="college_name" id="college_name" name="college_name" placeholder="College Name" required>
+        <label for="college_name"><b>Location</b></label>
+        <input type="location" id="location" name="college_name" placeholder="College Name" required>
 
         <label for="email_id"><b>Email ID</b></label>
         <input type="email_id" id="email_id" name="email_id" placeholder="Email ID" required>
