fixed merge changed

--- a/templates/home2.html
+++ b/templates/home2.html
@@ -13,6 +13,7 @@
     <a href="/categories/pottery" >Pottery</a><br>
     <a href="/categories/apparel" >Apparel</a><br>
     <a href="/categories/personal-care" >Personal care</a><br>
+    <a href="/new-product" >Add products</a><br>
 
 </body>
 </html>
