--- a/templates/user_login.html
+++ b/templates/user_login.html
@@ -182,17 +182,20 @@
 </head>
 
 <body>
-    <form action="/" method="post" class="login">
+    <form action="/login" method="post" class="login">
         <h1 style="padding-left: 130px; color:#151D3B ;"><i class="fa-solid fa-user"></i> Login
         </h1>
 
-        <label for="uname"><b>Username</b></label>
-        <input type="uname" id="uname" name="uname" placeholder="username">
+        <label for="email"><b>Email</b></label>
+        <input type="email" id="email" name="email" placeholder="username">
 
-        <label for="psw"><b>Password</b></label>
-        <input type="password" id="password" name="psw" placeholder="password" required>
+        <label for="password"><b>Password</b></label>
+        <input type="password" id="password" name="password" placeholder="password" required>
         <button onclick="location.href = 'home.html';" id="signin" class="float-left submit-button">Sign In</button>
         <!-- <button>Login</button> -->
+                    {% if message %}
+                    {{ message }}
+                   {% endif %}
     </form>
 
     <a href="/signup">
