linking through pages in html

--- a/templates/home.html
+++ b/templates/home.html
@@ -164,7 +164,7 @@
                         </span>
 
                         <div class="place__data">
-                            <h3 class="place__title"><a href="/products_page.html">Clothing</a></h3>
+                            <h3 class="place__title"><a href="products_page.html">Clothing</a></h3>
                             <span class="place__subtitle">IIT-R</span>
                             <span class="place__price">3rd year students</span>
                         </div>
