--- a/templates/new_product2.html
+++ b/templates/new_product2.html
@@ -18,6 +18,8 @@
         <input type="text" id="inventory" name="inventory"><br>
         <label for="categories">categories:</label><br><br>
         <input type="text" id="categories" name="categories"><br>
+        <label for="man_site">Manufacturing site:</label><br><br>
+        <input type="text" id="man_site" name="man_site"><br>
         <label for="description">description:</label><br><br>
         <input type="text" id="description" name="description"><br>
         <br>
