--- a/templates/home.html
+++ b/templates/home.html
@@ -164,9 +164,9 @@
                         </span>
 
                         <div class="place__data">
-                            <h3 class="place__title"><a href="products_page.html">Clothing</a></h3>
-                            <span class="place__subtitle">IIT-R</span>
-                            <span class="place__price">3rd year students</span>
+                            <h3 class="place__title"><a href="products_page.html">Farming</a></h3>
+                            <span class="place__subtitle">Rohtak Lands</span>
+                            <span class="place__price">Farmers club</span>
                         </div>
                     </div>
                     <!-- <button onclick="window.location.href = 'templates/products_page.html';"> Click here </button> -->
@@ -187,9 +187,9 @@
                         </span>
 
                         <div class="place__data">
-                            <h3 class="place__title">Dronacharya</h3>
-                            <span class="place__subtitle">Sri Venkateshwara College</span>
-                            <span class="place__price">1st Year Students</span>
+                            <h3 class="place__title">Architecture/Building</h3>
+                            <span class="place__subtitle">Rural Kashmir</span>
+                            <span class="place__price">Building community</span>
                         </div>
                     </div>
 
@@ -209,9 +209,9 @@
                         </span>
 
                         <div class="place__data">
-                            <h3 class="place__title">Meet-Net</h3>
-                            <span class="place__subtitle">IIT-M</span>
-                            <span class="place__price">BBA Students</span>
+                            <h3 class="place__title">Weaving</h3>
+                            <span class="place__subtitle">Hijjka sikka weavers</span>
+                            <span class="place__price">Girls Club</span>
                         </div>
                     </div>
 
@@ -231,9 +231,9 @@
                         </span>
 
                         <div class="place__data">
-                            <h3 class="place__title">Whitehaven</h3>
-                            <span class="place__subtitle">DU</span>
-                            <span class="place__price">SJCE</span>
+                            <h3 class="place__title">Bamboo basket making</h3>
+                            <span class="place__subtitle">Bamboo Makers</span>
+                            <span class="place__price">Men + women weavers</span>
                         </div>
                     </div>
 
@@ -253,9 +253,9 @@
                         </span>
 
                         <div class="place__data">
-                            <h3 class="place__title">Hvara</h3>
-                            <span class="place__subtitle">PST College</span>
-                            <span class="place__price">PG students</span>
+                            <h3 class="place__title">Handpress art</h3>
+                            <span class="place__subtitle">Design and craft</span>
+                            <span class="place__price">Arts and design print club</span>
                         </div>
                     </div>
 
