--- a/templates/items.html
+++ b/templates/items.html
@@ -7,6 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    item's page
+    {% for item in data %}
+
+    <p>
+        {{ item[0] }}
+    </p>
+        
+    {% endfor %}
+   
 </body>
 </html>
