--- a/templates/sign_up.html
+++ b/templates/sign_up.html
@@ -164,7 +164,7 @@
         <input type="uname" id="uname" name="uname" placeholder="Username">
 
         <label for="location"><b>Location</b></label>
-        <input type="location" id="location" name="location" placeholder="College Name" required>
+        <input type="location" id="location" name="location" placeholder="Location" required>
 
         <label for="email_id"><b>Email ID</b></label>
         <input type="email_id" id="email_id" name="email_id" placeholder="Email ID" required>
